--- a/src/pages/member/CartPage.scss
+++ b/src/pages/member/CartPage.scss
@@ -56,7 +56,7 @@
     padding: 0.2rem;
     margin: 0 auto;
     border-radius: 0.5rem;
-    border: 0.1rem #404040;
+    // border: 0.1rem #404040;
     background-color: #d86652;
     width: 100%;
     cursor: pointer;
@@ -65,9 +65,66 @@
     background-color: #40c0f0;
     width: 1.5rem;
   }
-  button.remove {
-    background-color: #f04040;
-    width: 35px;
-    border-radius: 25%;
+  .deletebutton {
+    border-style: none !important;
   }
+
+  //process
+  #progressbar li {
+    list-style-type: none;
+    width: 25%;
+    float: left;
+    position: relative;
+  }
+
+  #progressbar #step1:before {
+    content: "1";
+  }
+
+  #progressbar #step2:before {
+    content: "2";
+  }
+
+  #progressbar #step3:before {
+    content: "3";
+  }
+
+  #progressbar #step4:before {
+    content: "4";
+  }
+
+  #progressbar li:before {
+    width: 50px;
+    line-height: 45px;
+    font-weight: 600;
+    border: 1px solid #000000;
+    display: block;
+    font-size: 20px;
+    color: #000000;
+    background: #ffffff;
+    border-radius: 50%;
+    margin: 0 auto 10px auto;
+    padding: 2px;
+  }
+
+  #progressbar li:after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background: lightgray;
+    position: absolute;
+    left: 0;
+    top: 25px;
+    z-index: -1;
+  }
+
+  #progressbar li.active:before,
+  #progressbar li.active:after {
+    background: #dfe0d8;
+  }
+
+  .progress {
+    height: 20px;
+  }
+  
 }
